--- a/Testing/Dario_Test_Visualisierung.ipynb
+++ b/Testing/Dario_Test_Visualisierung.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-06-21T12:59:13.440838Z",
-     "start_time": "2023-06-21T12:59:11.951218Z"
+     "end_time": "2023-06-21T13:06:01.568335Z",
+     "start_time": "2023-06-21T13:05:59.983467Z"
     }
    },
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "gia_null_eto: pd.DataFrame = bac.gia_null_eto\n",
@@ -33,8 +33,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-21T11:14:08.142156Z",
-     "start_time": "2023-06-21T11:14:08.127860Z"
+     "end_time": "2023-06-21T13:08:04.350126Z",
+     "start_time": "2023-06-21T13:08:04.337493Z"
     }
    }
   },
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "gia_null_eto_mean = fun.df_mean(gia_null_eto)\n",
@@ -303,8 +303,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-21T11:19:51.897872Z",
-     "start_time": "2023-06-21T11:19:51.593130Z"
+     "end_time": "2023-06-21T13:08:12.228910Z",
+     "start_time": "2023-06-21T13:08:11.905492Z"
     }
    }
   },
@@ -427,8 +427,57 @@
     "collapsed": false,
     "is_executing": true,
     "ExecuteTime": {
-     "start_time": "2023-06-21T13:02:13.007545Z"
+     "start_time": "2023-06-21T13:06:15.493636Z"
     }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [],
+   "source": [
+    "gia_null_eto_mean.name = 'gia_null_eto_mean'\n",
+    "gia_null_nut_mean.name = 'gia_null_nut_mean'\n",
+    "gia_wt_nut_mean.name = 'gia_wt_nut_mean'\n",
+    "kot_hum_mean.name = 'kot_hum_mean'\n",
+    "\n",
+    "def plot_multiple_datasets(dataframes):\n",
+    "    # figsize kann verändert werden je nach Präferenz\n",
+    "    plt.figure(figsize=(40, 6))\n",
+    "    # for-loop der jeden Eintrag in der Liste \"Dataframes\" durchgeht\n",
+    "    for df in dataframes:\n",
+    "        # Werte für x-Achse aus 'position_mut' als int extrahiert\n",
+    "        x = df.columns.get_level_values('position_mut').astype(int)\n",
+    "        # Werte für y-Achse aus erster Zeile von df als float extrahiert\n",
+    "        y = df.iloc[0].values.astype(float)\n",
+    "        label = df.name\n",
+    "        plt.plot(x, y, label=label, marker='o')\n",
+    "    plt.xlabel('position')\n",
+    "    plt.ylabel('DMS_score')\n",
+    "    plt.title('Mean DMS_scores of different datasets throughout each position of tp53')\n",
+    "    #WARUM ZUR VERDAMMTEN HÖLLE MACHT ER NUR 102 BIS 292 ICH VERSTEHE ES NICHT BITTE BEENDE ES\n",
+    "    plt.xticks(x[::10])\n",
+    "    plt.legend()\n",
+    "    plt.show()\n",
+    "    #plt.plot(x[::10], y[::10], label=label, marker='o')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-21T13:08:35.463811Z",
+     "start_time": "2023-06-21T13:08:35.451402Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   }
  ],
