arbeit an Visualisierung, korrektur einiger Fehler

--- a/Testing/Dario_Test_Visualisierung.ipynb
+++ b/Testing/Dario_Test_Visualisierung.ipynb
@@ -17,7 +17,7 @@
     "import data_cleanup as dc\n",
     "import data_exploration as de\n",
     "import matplotlib.pyplot as plt\n",
-    "import Documentation as bac"
+    "import Documentation as bac\n"
    ]
   },
   {
