--- a/Testing/Frido_Test_Codons.ipynb
+++ b/Testing/Frido_Test_Codons.ipynb
@@ -42,8 +42,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-26T09:20:30.246063600Z",
-     "start_time": "2023-06-26T09:20:23.780176400Z"
+     "end_time": "2023-06-28T12:41:27.531594700Z",
+     "start_time": "2023-06-28T12:41:19.356550300Z"
     }
    }
   },
@@ -72,8 +72,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-26T09:20:30.411434800Z",
-     "start_time": "2023-06-26T09:20:30.192490500Z"
+     "end_time": "2023-06-28T12:41:27.697076800Z",
+     "start_time": "2023-06-28T12:41:27.431158200Z"
     }
    }
   },
@@ -88,8 +88,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-26T09:20:30.889606Z",
-     "start_time": "2023-06-26T09:20:30.420451200Z"
+     "end_time": "2023-06-28T12:41:28.057056800Z",
+     "start_time": "2023-06-28T12:41:27.701475500Z"
     }
    }
   },
@@ -114,8 +114,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-26T09:20:31.125511900Z",
-     "start_time": "2023-06-26T09:20:30.894398200Z"
+     "end_time": "2023-06-28T12:41:55.119382Z",
+     "start_time": "2023-06-28T12:41:54.855684600Z"
     }
    }
   },
@@ -129,8 +129,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-26T09:20:31.333719200Z",
-     "start_time": "2023-06-26T09:20:31.125511900Z"
+     "end_time": "2023-06-28T12:41:57.916844600Z",
+     "start_time": "2023-06-28T12:41:57.671613800Z"
     }
    }
   },
@@ -156,8 +156,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-26T09:20:31.571108300Z",
-     "start_time": "2023-06-26T09:20:31.337788600Z"
+     "end_time": "2023-06-28T12:41:59.214554900Z",
+     "start_time": "2023-06-28T12:41:58.937826Z"
     }
    }
   },
@@ -182,71 +182,77 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-26T09:20:31.916487800Z",
-     "start_time": "2023-06-26T09:20:31.573379Z"
+     "end_time": "2023-06-28T12:42:02.121564800Z",
+     "start_time": "2023-06-28T12:42:01.505895500Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'DataFrame' object has no attribute 'Original'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
-      "\u001B[1;32m~\\AppData\\Local\\Temp\\ipykernel_26588\\2565594057.py\u001B[0m in \u001B[0;36m?\u001B[1;34m()\u001B[0m\n\u001B[1;32m---> 15\u001B[1;33m \u001B[1;31m## Das DMS_score df soll in ein df umgewandelt werden, indem nur die single mutations drinstehen. In dieser Zelle probiere ich das erst einmal für eine Zeile, bevor ich über alle iteriere.\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     16\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     17\u001B[0m \u001B[1;31m#load DMS_scores\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     18\u001B[0m \u001B[0mgia_null_eto\u001B[0m\u001B[1;33m:\u001B[0m \u001B[0mpd\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mDataFrame\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mpd\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mread_csv\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;34m'../DMS_data/P53_HUMAN_Giacomelli_NULL_Etoposide_2018.csv'\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;32m~\\Documents\\Uni\\SS_2023\\Bioinfo\\Projekt\\data_exploration\\codon.py\u001B[0m in \u001B[0;36m?\u001B[1;34m(position, variation_matrix)\u001B[0m\n\u001B[0;32m     40\u001B[0m     \u001B[1;34m\"\"\"Function returning the probability for each AMS, resulting from a single mutation in the codon as pd.Series\"\"\"\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     41\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     42\u001B[0m     \u001B[0mres\u001B[0m\u001B[1;33m:\u001B[0m \u001B[0mpd\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mSeries\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mvariation_matrix\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mloc\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0mposition\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mvalue_counts\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mnormalize\u001B[0m\u001B[1;33m=\u001B[0m\u001B[1;32mTrue\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     43\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 44\u001B[1;33m     \u001B[1;32mreturn\u001B[0m \u001B[0mres\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mdrop\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mvariation_matrix\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mOriginal\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0miloc\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0mposition\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m",
-      "\u001B[1;32m~\\Documents\\Uni\\SS_2023\\Bioinfo\\Projekt\\venv\\lib\\site-packages\\pandas\\core\\generic.py\u001B[0m in \u001B[0;36m?\u001B[1;34m(self, name)\u001B[0m\n\u001B[0;32m   5985\u001B[0m             \u001B[1;32mand\u001B[0m \u001B[0mname\u001B[0m \u001B[1;32mnot\u001B[0m \u001B[1;32min\u001B[0m \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0m_accessors\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m   5986\u001B[0m             \u001B[1;32mand\u001B[0m \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0m_info_axis\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0m_can_hold_identifiers_and_holds_name\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mname\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m   5987\u001B[0m         ):\n\u001B[0;32m   5988\u001B[0m             \u001B[1;32mreturn\u001B[0m \u001B[0mself\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0mname\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m-> 5989\u001B[1;33m         \u001B[1;32mreturn\u001B[0m \u001B[0mobject\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0m__getattribute__\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mself\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mname\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m",
-      "\u001B[1;31mAttributeError\u001B[0m: 'DataFrame' object has no attribute 'Original'"
-     ]
-    }
-   ],
+   "execution_count": 9,
+   "outputs": [],
    "source": [
     "##### Wichtig\n",
     "## Function was updated on 26.06.23 -> slightly different parameters needed. Usage → see in codon.py\n",
     "# Das DMS_score df soll in ein df umgewandelt werden, indem nur die single mutations drinstehen. In dieser Zelle probiere ich das erst einmal für eine Zeile, bevor ich über alle iteriere.\n",
     "\n",
-    "#load DMS_scores\n",
+    "p53_var_frame: pd.DataFrame = de.translate_codons_df(de.generate_codon_variations(p53_codons))\n",
     "gia_null_eto: pd.DataFrame = pd.read_csv('../DMS_data/P53_HUMAN_Giacomelli_NULL_Etoposide_2018.csv')\n",
-    "df = dc.df_transform_inverse(gia_null_eto)\n",
+    "df = dc.min_max_norm(dc.df_transform_inverse(gia_null_eto))\n",
     "\n",
-    "#modify \"aa\", so that all \"*\" values are eliminated and so that the original aminoacid is cut off\n",
-    "aa_cleaned = aa.replace('*', np.nan).iloc[:, 1:]\n",
+    "sel_mut: pd.DataFrame = de.select_smut(df, p53_var_frame)\n",
     "\n",
-    "\n",
-    "#position\n",
-    "x=0\n",
-    "\n",
-    "# get single mutated AAs\n",
-    "mut_per_pos = de.prob_as_position(x,aa_cleaned).index\n",
-    "# mut_per_pos\n",
-    "# select single mutations out of all DMS_score mutations\n",
-    "selected_columns = df.loc[x+1,mut_per_pos]\n",
-    "\n",
-    "# selected_columns"
+    "# #load DMS_scores\n",
+    "# gia_null_eto: pd.DataFrame = pd.read_csv('../DMS_data/P53_HUMAN_Giacomelli_NULL_Etoposide_2018.csv')\n",
+    "# df = dc.df_transform_inverse(gia_null_eto)\n",
+    "#\n",
+    "# #modify \"aa\", so that all \"*\" values are eliminated and so that the original aminoacid is cut off\n",
+    "# aa_cleaned = aa.replace('*', np.nan).iloc[:, 1:]\n",
+    "#\n",
+    "#\n",
+    "# #position\n",
+    "# x=0\n",
+    "#\n",
+    "# # get single mutated AAs\n",
+    "# mut_per_pos = de.prob_as_position(x,aa_cleaned).index\n",
+    "# # mut_per_pos\n",
+    "# # select single mutations out of all DMS_score mutations\n",
+    "# selected_columns = df.loc[x+1,mut_per_pos]\n",
+    "#\n",
+    "# # selected_columns"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-26T09:20:33.994446600Z",
-     "start_time": "2023-06-26T09:20:31.918271800Z"
+     "end_time": "2023-06-28T12:44:09.719106500Z",
+     "start_time": "2023-06-28T12:44:06.300672Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 10,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "            I         L         V         K         R         T         D   \n0   -0.445662 -0.896484 -0.236035  0.339590 -0.479409  0.143952       NaN  \\\n1         NaN       NaN  0.291224  0.530006       NaN       NaN  0.461640   \n2         NaN       NaN -0.029022  0.515066       NaN       NaN  0.478411   \n3         NaN  0.298945       NaN       NaN  0.398395  0.470961       NaN   \n4         NaN  0.406995       NaN  0.628535  0.175909       NaN       NaN   \n..        ...       ...       ...       ...       ...       ...       ...   \n388       NaN       NaN  0.464735       NaN  0.595348       NaN       NaN   \n389       NaN  0.598105       NaN       NaN  0.777285  0.752204       NaN   \n390       NaN       NaN  0.837795       NaN       NaN       NaN       NaN   \n391       NaN  0.507320       NaN       NaN       NaN  0.698685       NaN   \n392       NaN       NaN  0.790607       NaN       NaN       NaN       NaN   \n\n            Q         G         A         S         H         E         P   \n0         NaN       NaN       NaN       NaN       NaN       NaN       NaN  \\\n1    0.320817 -0.194648  0.010515       NaN       NaN       NaN       NaN   \n2    0.350823 -0.233738  0.096724       NaN       NaN       NaN       NaN   \n3    0.507619       NaN -0.336677  0.358706       NaN       NaN       NaN   \n4         NaN       NaN       NaN       NaN  0.301647  0.050641  0.142345   \n..        ...       ...       ...       ...       ...       ...       ...   \n388       NaN       NaN  0.681923       NaN       NaN  0.198170       NaN   \n389       NaN       NaN  0.816095  0.447437  0.432709       NaN       NaN   \n390       NaN  0.606592  0.624231       NaN  0.537711  0.411281       NaN   \n391       NaN       NaN  0.409650       NaN       NaN       NaN  0.570893   \n392       NaN  0.641101  0.666104       NaN  0.583339  0.269181       NaN   \n\n            N         Y   C   F   M         W  \n0         NaN       NaN NaN NaN NaN       NaN  \n1         NaN       NaN NaN NaN NaN       NaN  \n2         NaN       NaN NaN NaN NaN       NaN  \n3         NaN       NaN NaN NaN NaN       NaN  \n4         NaN       NaN NaN NaN NaN       NaN  \n..        ...       ...  ..  ..  ..       ...  \n388       NaN       NaN NaN NaN NaN  0.555301  \n389       NaN       NaN NaN NaN NaN       NaN  \n390  0.555494  0.583616 NaN NaN NaN       NaN  \n391       NaN       NaN NaN NaN NaN       NaN  \n392  0.504888  0.549047 NaN NaN NaN       NaN  \n\n[393 rows x 20 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>I</th>\n      <th>L</th>\n      <th>V</th>\n      <th>K</th>\n      <th>R</th>\n      <th>T</th>\n      <th>D</th>\n      <th>Q</th>\n      <th>G</th>\n      <th>A</th>\n      <th>S</th>\n      <th>H</th>\n      <th>E</th>\n      <th>P</th>\n      <th>N</th>\n      <th>Y</th>\n      <th>C</th>\n      <th>F</th>\n      <th>M</th>\n      <th>W</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>-0.445662</td>\n      <td>-0.896484</td>\n      <td>-0.236035</td>\n      <td>0.339590</td>\n      <td>-0.479409</td>\n      <td>0.143952</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.291224</td>\n      <td>0.530006</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.461640</td>\n      <td>0.320817</td>\n      <td>-0.194648</td>\n      <td>0.010515</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>-0.029022</td>\n      <td>0.515066</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.478411</td>\n      <td>0.350823</td>\n      <td>-0.233738</td>\n      <td>0.096724</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>NaN</td>\n      <td>0.298945</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.398395</td>\n      <td>0.470961</td>\n      <td>NaN</td>\n      <td>0.507619</td>\n      <td>NaN</td>\n      <td>-0.336677</td>\n      <td>0.358706</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>NaN</td>\n      <td>0.406995</td>\n      <td>NaN</td>\n      <td>0.628535</td>\n      <td>0.175909</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.301647</td>\n      <td>0.050641</td>\n      <td>0.142345</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>388</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.464735</td>\n      <td>NaN</td>\n      <td>0.595348</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.681923</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.198170</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.555301</td>\n    </tr>\n    <tr>\n      <th>389</th>\n      <td>NaN</td>\n      <td>0.598105</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.777285</td>\n      <td>0.752204</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.816095</td>\n      <td>0.447437</td>\n      <td>0.432709</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>390</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.837795</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.606592</td>\n      <td>0.624231</td>\n      <td>NaN</td>\n      <td>0.537711</td>\n      <td>0.411281</td>\n      <td>NaN</td>\n      <td>0.555494</td>\n      <td>0.583616</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>391</th>\n      <td>NaN</td>\n      <td>0.507320</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.698685</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.409650</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.570893</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>392</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.790607</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.641101</td>\n      <td>0.666104</td>\n      <td>NaN</td>\n      <td>0.583339</td>\n      <td>0.269181</td>\n      <td>NaN</td>\n      <td>0.504888</td>\n      <td>0.549047</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n<p>393 rows × 20 columns</p>\n</div>"
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# use the example for one row to iterate it over the whole length of the protein\n",
-    "de.select_smut(gia_null_eto,aa)"
+    "sel_mut"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-28T12:44:20.110618200Z",
+     "start_time": "2023-06-28T12:44:19.382979700Z"
+    }
    }
   }
  ],
