Neue Ordnung, Testing gelöscht

--- a/Documentation/P53 - DMS Documentation.ipynb
+++ b/Documentation/P53 - DMS Documentation.ipynb
@@ -3330,7 +3330,20 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "\n",
+    "## Data Visualization\n",
+    "*Wie können unsere Ergebnisse visuell dargestellt werden und kann man durch Visuelle daten auf neue Erkentnisse trifft...?*\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
