--- a/severity_score/Codons.ipynb
+++ b/severity_score/Codons.ipynb
@@ -274,34 +274,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "list"
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(p53_codons)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-06-30T13:54:39.458879200Z",
-     "start_time": "2023-06-30T13:54:39.364336600Z"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
    "execution_count": 17,
    "outputs": [],
    "source": [
-    "#Checking whether its the same sequence:"
+    "#Updating pre-existing functions to eliminate Bio package"
    ],
    "metadata": {
     "collapsed": false,
@@ -354,7 +330,6 @@
    "execution_count": 35,
    "outputs": [],
    "source": [
-    "#deleting Bio.Seq to generate codons independently\n",
     "def translate_codons_df(df: pd.DataFrame) -> pd.DataFrame:\n",
     "    translated_df = pd.DataFrame()\n",
     "\n",
