--- a/Visualization/VisualizationFinalTests.ipynb
+++ b/Visualization/VisualizationFinalTests.ipynb
@@ -160,7 +160,7 @@
     "\n",
     "#WEITERE ANMERKUNG: Da der Kotler Datensatz nur zwischen AA position 102 und 292 existiert, musst du die Variance Matrix auch auf diese Länge neu zuschneiden. Dafür gibt es noch keine Funktion, aber das Endprobdukt muss wie folgt aussehen:\n",
     "\n",
-    "#variation_matrix_kotler = ss.translate_codons_df(ss.generate_codon_variations(#hier muss jetzt die Codonliste von p53_codons_kotler geslicet auf 102 bis 292 rein))\n",
+    "#variation_matrix_kotler = ss.translate_codons_df(ss.generate_codon_variations(hier muss jetzt die Codonliste von p53_codons_kotler geslicet auf 102 bis 292 rein))\n",
     "#cleaned_vm_kotler = ss.clean_variation_matrix(variation_matrix_kotler)"
    ],
    "metadata": {
